prevent overlap range labels

--- a/src/stylus/search.styl
+++ b/src/stylus/search.styl
@@ -26,7 +26,6 @@
 						svg
 							width 12px
 							fill white
-			
 			.facets
 				margin-top 20px
 				
@@ -42,6 +41,21 @@
 					
 					.body
 						margin-top 4px
+				
+				.facet.range .body .slider .dash
+					font-size 11px
+					margin-left 5px
+
+				.facet.range .body .slider .handle input.month-min,
+				.facet.range .body .slider .handle label.month-min
+					margin-left -24px
+					font-size 11px
+				
+				.facet.range .body .slider .handle input.month-max,
+				.facet.range .body .slider .handle label.month-max
+					margin-left 24px
+					font-size 11px
+
 		
 		.results
 			width 70%
